style: Fix overflow content

--- a/sign-up-form/style.css
+++ b/sign-up-form/style.css
@@ -19,10 +19,10 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 body {
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -48,11 +48,11 @@ body {
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.3);
   align-self: center;
-  width: 100%;
+  max-width: 100%;
 }
 
 .logo {
-  width: 30%;
+  max-width: 30%;
 }
 .logo-heading {
   color: #f8f9fa;
@@ -72,7 +72,7 @@ body {
   padding: 0 5rem 0 5rem;
   margin-top: 10rem;
   margin-bottom: 5rem;
-  width: 100ch;
+  max-width: 100ch;
 }
 
 .heading-primary {
